python/examples/types/simple.py

x = 23
print(x)

x = "42"
print(x)

x = ["a", "b"]
print(x)
